8224130: create additional automated tests for create-app-image
Reviewed-by: asemenyuk, almatvee